# coding-agent

./: .env.example  .gitignore  README.md  TODO  entryPoint.sh  main.py  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/gemini/: route.ts
frontend/app/api/transcribe/: route.ts
frontend/app/info/: page.tsx
frontend/app/live-call/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: FontLoader.tsx  Navbar.tsx  Providers.tsx
frontend/lib/: audioUtils.ts
notebooks/: chatbot-human-feedback.ipynb  chatbot.ipynb  hf_customize_state.ipynb  information-gather-prompting.ipynb
ui/: __init__.py  chat_history.py  handlers.py  interface.py
ui/tabs/: __init__.py  api_settings_tab.py  coding_agent_tab.py  help_tab.py  histories_tab.py  model_settings_tab.py  usage_info_tab.py
